# VIBMask

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: syn1.json  syn2.json  syn3.json  syn4.json  syn5.json  syn6.json
examples/: demo_synthetic.py  reproduce_table1.py
examples/mnist/: README.md  demo_mnist.py
examples/mnist/configs/: mnist_baseline.json  mnist_v14a.json
tests/: test_smoke.py
vibmask/: __init__.py  data.py  loss.py  metrics.py  mnist_data.py  model.py  train.py
